-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7
-
None
-
-
bc7e728fc (dev), 34e3bdcb5 (6.7), 3b6c471f4 (6.6)
Steps to reproduce:
- Open a native dialog in iOS (file, color, etc).
- Close dialog
- Rotate the phone so layout changes to Landscape
Expected:
- Orientation changes to landscape
Actual:
- App crashes
Update: The crash happens also when trying to open another native dialog after closing a previous one, or when trying to open a Menu from QMenuBar.
Relevant stacktrace attached.stacktrace.txt![]()
| For Gerrit Dashboard: QTBUG-120369 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 537239,2 | iOS: Remove QUIView from superview on QIOSWindow destruction | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 537333,2 | iOS: Remove QUIView from superview on QIOSWindow destruction | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 537394,2 | iOS: Remove QUIView from superview on QIOSWindow destruction | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |